sinalcabo/force-app/main/default/objects/SC_Recalculo_Log__c/SC_Recalculo_Log__c.object-meta.xml
<CustomObject>
    <description>Uma linha por execução do recálculo de segmento. Existe porque a janela de 12 meses move-se sozinha na viragem do mês e o recálculo mensal só abrange as contas na fronteira: sem o número de contas avaliadas e alteradas em cada corrida, uma lógica de fronteira que deixa de apanhar casos falha em silêncio e ninguém percebe durante meses. Um relatório sobre este objecto mostra a tendência e é o que torna a falha visível.</description>
    <label>SC Recálculo Log</label>
    <nameField>
        <displayFormat>RECALC-{00000}</displayFormat>
        <label>Execução</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SC Recálculo Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>