sinalcabo/force-app/main/default/objects/SC_Recalculo_Log__c/fields/Contas_Alteradas__c.field-meta.xml
<CustomField>
    <fullName>Contas_Alteradas__c</fullName>
    <description>Das avaliadas, quantas tinham pelo menos um valor diferente e foram gravadas. Zero aqui com avaliadas acima de zero é normal e saudável: significa que os valores já estavam certos.</description>
    <label>Contas Alteradas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>