sinalcabo/force-app/main/default/objects/SC_Recalculo_Log__c/fields/Contas_Avaliadas__c.field-meta.xml
<CustomField>
    <fullName>Contas_Avaliadas__c</fullName>
    <description>Quantas contas o recálculo leu e recalculou. Comparar com o total da org: se este número cair sem razão de negócio, a lógica de fronteira deixou de apanhar casos.</description>
    <label>Contas Avaliadas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>