sinalcabo/force-app/main/default/objects/SC_Recalculo_Log__c/fields/Detalhe__c.field-meta.xml
<CustomField>
    <fullName>Detalhe__c</fullName>
    <description>As mudanças de segmento, uma por linha, e as mensagens de erro. Truncado se exceder o campo, e nesse caso a última linha di-lo.</description>
    <label>Detalhe</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>