sinalcabo/force-app/main/default/objects/SC_Recalculo_Log__c/fields/Duracao_Segundos__c.field-meta.xml
<CustomField>
    <fullName>Duracao_Segundos__c</fullName>
    <description>Tempo de parede da fase. Serve para perceber se o recálculo completo ainda cabe na janela de manutenção quando a base de contas crescer.</description>
    <label>Duração (s)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>