sinalcabo/force-app/main/default/objects/SC_Recalculo_Log__c/fields/Erros__c.field-meta.xml
<CustomField>
    <fullName>Erros__c</fullName>
    <description>Contas que o recálculo não conseguiu gravar. Acima de zero exige olhar o detalhe.</description>
    <label>Erros</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>