sinalcabo/force-app/main/default/objects/SC_Recalculo_Log__c/fields/Fase__c.field-meta.xml
<CustomField>
    <fullName>Fase__c</fullName>
    <description>Individual (primeira passagem, os campos da própria conta) ou Grupo (segunda passagem, o agregado das mães). Uma execução escreve uma linha por fase.</description>
    <label>Fase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Grupo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>