sinalcabo/force-app/main/default/objects/SC_Recalculo_Log__c/fields/Modo__c.field-meta.xml
<CustomField>
    <fullName>Modo__c</fullName>
    <description>Mensal (agendado, só as contas na fronteira da janela), Completo (todas as contas), Conta (uma conta, pelo botão da ficha).</description>
    <label>Modo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mensal</fullName>
            </value>
            <value>
                <fullName>Completo</fullName>
            </value>
            <value>
                <fullName>Conta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>