sinalcabo/force-app/main/default/objects/SC_Recalculo_Log__c/fields/Segmentos_Alterados__c.field-meta.xml
<CustomField>
    <fullName>Segmentos_Alterados__c</fullName>
    <description>Das alteradas, quantas mudaram de segmento (volume ou margem). É o número que interessa ao negócio, porque é o que o comercial vê mudar na ficha.</description>
    <label>Segmentos Alterados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>