sinalcabo/force-app/main/default/objects/SC_Recalculo_Log__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Modo__c</columns>
    <columns>Fase__c</columns>
    <columns>Contas_Avaliadas__c</columns>
    <columns>Contas_Alteradas__c</columns>
    <columns>Segmentos_Alterados__c</columns>
    <columns>Erros__c</columns>
    <columns>Duracao_Segundos__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>